# startrail

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  about.txt  about.txt.in  demo.lua  test.py  wizard.lua
doc/html/: _c_cfg_reader_8cpp.html  _c_cfg_reader_8cpp__incl.map  _c_cfg_reader_8cpp__incl.md5  _c_cfg_reader_8cpp_source.html  _c_cfg_reader_8h.html  _c_cfg_reader_8h__dep__incl.map  _c_cfg_reader_8h__dep__incl.md5  _c_cfg_reader_8h__incl.md5  _c_cfg_reader_8h_source.html  _c_exif_handler_8cpp.html  _c_exif_handler_8cpp__incl.map  _c_exif_handler_8cpp__incl.md5  _c_exif_handler_8cpp_source.html  _c_exif_handler_8h.html  _c_exif_handler_8h__dep__incl.map  _c_exif_handler_8h__dep__incl.md5  _c_exif_handler_8h__incl.map  _c_exif_handler_8h__incl.md5  _c_exif_handler_8h_source.html  _c_image_composer_8cpp.html  _c_image_composer_8cpp__incl.map  _c_image_composer_8cpp__incl.md5  _c_image_composer_8cpp_source.html  _c_image_composer_8h.html  _c_image_composer_8h__dep__incl.map  _c_image_composer_8h__dep__incl.md5  _c_image_composer_8h__incl.map  _c_image_composer_8h__incl.md5  _c_image_composer_8h_source.html  about_8txt.html  annotated.html  class_c_config_read-members.html  class_c_config_read.html  class_c_config_read__coll__graph.md5  class_c_exif_handler-members.html  class_c_exif_handler.html  class_c_exif_handler__coll__graph.map  class_c_exif_handler__coll__graph.md5  class_c_image_composer-members.html  class_c_image_composer.html  (+51 more)
doc/html/search/: all_61.html  all_62.html  all_63.html  all_65.html  all_66.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_73.html  classes_63.html  classes_69.html  enumvalues_64.html  enumvalues_69.html  enumvalues_73.html  files_61.html  files_63.html  files_6c.html  files_77.html  functions_61.html  functions_62.html  functions_63.html  functions_67.html  functions_69.html  functions_6c.html  functions_6d.html  functions_70.html  functions_73.html  functions_75.html  functions_7e.html  search.js  typedefs_73.html  variables_62.html  variables_63.html  variables_6c.html  variables_6d.html  variables_70.html  variables_73.html
images/: test.proj  test.txt
iptc/: iptc.info
lib/: CMakeLists.txt  libstartrail.cpp
python/: CMakeLists.txt  libstartrail.cpp
qt_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CCfgReader.cpp  CCfgReader.h  CExifHandler.cpp  CExifHandler.h  CFileLister.cpp  CFileLister.h  CImageComposer.cpp  CImageComposer.h  CProjReader.cpp  CProjReader.h  CProjWriter.cpp  CProjWriter.h  IReader.cpp  IReader.h  config.h  config.h.in
test/: CMakeLists.txt  unittest.cpp
test_data/: testfile1.proj  testfile1.txt
